RESOLVED FIXED154695
Cache::traverse should pass the record info to its traversal handler
https://bugs.webkit.org/show_bug.cgi?id=154695
Summary Cache::traverse should pass the record info to its traversal handler
Anders Carlsson
Reported 2016-02-25 14:39:53 PST
Cache::traverse should pass the record info to its traversal handler
Attachments
Patch (5.30 KB, patch)
2016-02-25 14:41 PST, Anders Carlsson
koivisto: review+
Anders Carlsson
Comment 1 2016-02-25 14:41:21 PST
WebKit Commit Bot
Comment 2 2016-02-25 14:42:40 PST
Attachment 272243 [details] did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.h:115: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.cpp:523: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2016-02-26 10:44:10 PST
Note You need to log in before you can comment on or make changes to this bug.