Cache::traverse should pass the record info to its traversal handler https://bugs.webkit.org/show_bug.cgi?id=154695

Reviewed by Antti Koivisto.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::fetchDiskCacheEntries):
(WebKit::clearDiskCacheEntries):
* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::Cache::traverse):
* NetworkProcess/cache/NetworkCache.h:

Canonical link: https://commits.webkit.org/172826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197180 268f45cc-cd09-0410-ab3c-d52691b4dbfc